Safari issue algolia container overlaps search input

--- a/css/main.scss
+++ b/css/main.scss
@@ -493,7 +493,7 @@ body.docs #nav {
         border: none;
         position: relative;
         top: 10px;
-        min-width: 740px;
+        min-width: 440px;
         background: none;
         padding-left: 0;
         font-size: 14px;
